--- a/16background.html
+++ b/16background.html
@@ -25,13 +25,17 @@
             .home:hover { background-position: 0 -45px; }
             .prev:hover { background-position: -47px -45px; }
             .next:hover { background-position: -91px -45px; }
+
+            ul { list-style-type: none; margin: 0; padding: 0; }
+            ul li { /*list-style-image: url(img/butterfly.png); padding-bottom: 50px; */
+                    background: url(img/butterfly.png) no-repeat left top; height: 35px; padding: 45px; padding-top: 5px; }
         </style>
     </head>
     <body>
         <h1>배경</h1>
         <h2>배경색</h2>
         <p style="background-color: aquamarine">이 글이 보이나요?</p>
-        <h2>배경이미지</h2>
+        <h2>배경 이미지</h2>
         <div class="box box1"></div>
         <hr>
         <div class="box box2"></div>
@@ -49,6 +53,15 @@
         <div class="sprite1 btn home"></div>
         <div class="sprite1 btn prev"></div>
         <div class="sprite1 btn next"></div>
+
+        <h2>블릿 이미지</h2>
+        <ul>
+            <li>라면</li>
+            <li>햄버거</li>
+            <li>짜장면</li>
+            <li>탕수육</li>
+            <li>떡볶이</li>
+        </ul>
     </body>
 </html>
 <!--
@@ -56,16 +69,20 @@
 
 배경색: background-color 속성으로 배경색 지정 가능
 
-배경이미지: background-image 속성으로 배경이미지 지정 가능
-            이미지 영역보다 이미지가 작은 경우, 반복적으로 이미지가 표시됨
-            단, background-repeat 속성을 이용하면 반복적으로 표시되는 이미지를 적절히 조절할 수 있음
-            background-position을 이용하면 배경으로 보여지는 이미지의 위치를 변경할 수 있음
-            위 속성들을 축약형으로도 사용할 수 있음
-            background: 배경색/이미지/반복/위치/고정 여부
+배경 이미지: background-image 속성으로 배경이미지 지정 가능
+             이미지 영역보다 이미지가 작은 경우, 반복적으로 이미지가 표시됨
+             단, background-repeat 속성을 이용하면 반복적으로 표시되는 이미지를 적절히 조절할 수 있음
+             background-position을 이용하면 배경으로 보여지는 이미지의 위치를 변경할 수 있음
+             위 속성들을 축약형으로도 사용할 수 있음
+ - background: 배경색/이미지/반복/위치/고정 여부
 
 이미지 스프라이트(sprite): 웹 페이지에 사용하는 이미지들을 하나의 이미지 파일에 합쳐서 관리하는 기법을 의미
                            웹 페이지에서 이미지를 요청할 때마다 서버와 통신을 하게 되는데, 이미지 수가 많은 경우 빈번한 요청으로 인해 이미지 로딩이 느려지고, 서버에 부하가 많이 생김
                            반면, 스프라이트를 사용하면 서버 요청을 단 몇 번만으로 줄일 수 있고, 로딩 시간이 단축되는 효과가 있음
                            또한 많은 이미지 파일을 관리하는 것보다 몇 개의 파일만 관리하면 되므로 간편함
 
+블릿 이미지:목록태그에 글머리 기호는 크게 3가지 종류로 나뉨
+            하지만 기호 말고 이미지로 기호를 대신할 수도 있음
+            list-style-type 속성으로 기호의 종류를 변경하거나 숨길 수 있음
+            list-style-image 속성으로 블릿 이미지를 표시할 수 있음
 -->
