부트스트랩 기초 및 고급

--- a/26comp.html
+++ b/26comp.html
@@ -56,7 +56,7 @@
     <div><button type="button" class="btn btn-dark"><i class="bi bi-alarm"></i>알람</button></div>
     <div><i class="bi bi-command" style="color: aquamarine; font-size: 5rem"></i></div>
 
-    <h2>font awesome: fas-xxx (2021.05 기준 1600개 아이콘)</h2>
+    <h2>font awesome: fab-xxx (2021.05 기준 1600개 아이콘)</h2>
     <div><i class="fab fa-apple"></i>
          <i class="fab fa-apple fa-3x" style="color: mediumpurple"></i></div>
 
