--- a/29condition.html
+++ b/29condition.html
@@ -84,7 +84,7 @@
             let today = new Date();
             document.write("<p>" + today.getFullYear() + "년 " + (today.getMonth() + 1) + "월 " + today.getDate() + "일 </p>");
 
-            document.write("<p>" + today.getHours() + "시 " + (today.getMinutes() + 1) + "분 " + today.getSeconds() + "초 </p>");
+            document.write("<p>" + today.getHours() + "시 " + today.getMinutes() + "분 " + today.getSeconds() + "초 </p>");
 
         </script>
     </body>
