--- a/34event.html
+++ b/34event.html
@@ -150,7 +150,7 @@
                         isjoin.innerHTML = '아이디가 존재합니다!';
                         isjoin.style.color = 'red'; // 글자색을 빨간색으로
                         break; // 반복 실행에서 벗어남
-                    } else
+                    } else {
                         isjoin.innerHTML = '사용 가능한 아이디입니다!';
                         isjoin.style.color = 'blue'; // 글자색을 파란색으로
                 }
